--- a/style.css
+++ b/style.css
@@ -1,3 +1,29 @@
-body {
+.navbar{
+ 
+  background-color: brown;
+  overflow: hidden;
+  display: block;
+  top: 10;
+ 
+}
 
+.navbar a{
+  
+  text-decoration: none;
+  color: blue;
+  float: right;
+  padding: 10px 44px;
+  font-size: 20px;
+  
+}
+
+.navbar a:hover {
+  background-color: green;
+}
+h1{
+  color: white;
+  text-align: center;
+}
+body{
+  background-color: green;
 }
